# AgeOverflow

./: .gitignore  AI-log.md  AI.md  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  k6.js  notes.md  pyproject.toml
.github/workflows/: cloud.yml
GCAS/: __init__.py
GCAS/models/: GCAS.py
GCAS/tasks/: eng.py
GCAS/views/: routes.py
terraform/: .terraform.lock.hcl  README.md  autoscaling.tf  db.tf  ecs-workers.tf  ecs.tf  image.tf  lb.tf  main.tf  sqs.tf
