[project]
name = "ageoverflow-cailindelgado"
version = "0.1.0"
description = ""
authors = [
    {name = "Cailin Delgado",email = "c.delgado@uqconnect.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "rfc3339-validator (>=0.1.4,<0.2.0)",
    "celery[sqs] (>=5.6.3,<6.0.0)",
    "boto3 (>=1.42.97,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
